# finetune-smollm-json-example

./: README.md  finetune_data.jsonl  finetune_notebook.ipynb  main.py  pyproject.toml  requirements.txt
data/: my_data.jsonl
