[project]
name = "finetune-smollm-json-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.0",
    "bitsandbytes-cuda112>=0.26.0.post2",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "peft>=0.15.2",
    "transformers>=4.52.4",
]
